--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Jpawitro's Space
+name: Joko Pawitro
+occupation: '| Asset Engineer | Data Scientist | Business Analyst |'
 email: jpawitro@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Joko Pawitro's personal page.
@@ -26,6 +28,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jpawitro
 github_username:  jpawitro
+linkedin_username: jpawitro
+instagram_username:  jpawitro
+youtube:
 
 # Build settings
 # theme: jekyll-theme-hydejack
