--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ twitter_username: jpawitro
 github_username:  jpawitro
 linkedin_username: jpawitro
 instagram_username:  jpawitro
-youtube:
+youtube_username:
+medium_username:
 
 # Build settings
 # theme: jekyll-theme-hydejack
