--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,30 @@ description: >- # this means to ignore newlines until "baseurl:"
   Joko Pawitro's personal page.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jpawitro
-github_username:  jpawitro
-linkedin_username: jpawitro
-instagram_username:  jpawitro
-youtube_username:
-medium_username:
+
+occupations:
+  orsted:
+    company : Ørsted
+    description: Ørsted A/S (formerly DONG Energy) is a Danish multinational power company based in Fredericia, Denmark. It is the largest energy company in Denmark and the world's largest developer of offshore wind power by number of built offshore wind farms.
+    url: https://orsted.com
+    logo: https://orstedcdn.azureedge.net/-/media/www/images/corp/graphics/logos/orsted-logo/orstedlogo_svg.ashx?mh=1440&mw=1440&rev=5419029aad524e4a972b175e4fb0c899&hash=24271881DFB4168B58A188C0BC5C96AF
+    role: Cable Monitoring Specialist 
+    responsibility: A data scientist role responsible for organizing data, developing analyses, and programming solutions to ensure the availability of 30-400 kV offshore and onshore cable connections.
+  practicum:
+    company: Practicum
+    description: Practicum is an international training bootcamp that are 100% online and part time which offer various software engineering and data analytics courses. The company help people with versatile backgrounds learn a new profession online and kick start a sustainable career in tech
+    url: https://practicum.com
+    logo: https://t.cf.practicum.com/usa-main/tild3562-3266-4462-a665-346363663833__vector_5.svg
+    role: Data Scientist / Data Analyst Mentor
+    responsibility: Assist the students to understand the concepts of data analysis and data science
+
+social:
+  twitter: jpawitro
+  github:  jpawitro
+  linkedin: jpawitro
+  instagram:  jpawitro
+  youtube:
+  medium:
 
 # Build settings
 # theme: jekyll-theme-hydejack
