--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ occupations:
     logo: assets/images/Practicum.png
     image: assets/images/practicum_banner.png
     role: Data Scientist / Data Analyst Mentor
-    responsibility: Assist the students to understand the concepts of data analysis and data science. Conduct webinar on industrial application, professional coaching and development.
+    responsibility: Assist the students to understand the concepts of data analysis and data science. Conduct webinars on industrial applications, do professional coaching and development.
 
 social:
   twitter: jpawitro
